--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
     </main>
 
     <aside class="explore">
-
+      <h3>Explore the planes</h3>
+      <div class="plane-frame"></div>
+      <div class="plane-detail"></div>
     </aside>
 
     <footer class="bottom">
