Added images for the timeline stages

--- a/src/js/_planeDetail.html
+++ b/src/js/_planeDetail.html
@@ -7,7 +7,7 @@
   </div>
   <ul class="stats">
     <li> <b>Material</b>: <%= data.material %>
-    <li> <b>Launched</b>: <%= data.launched %>
+    <li> <b>Launch date</b>: <%= data.launched %>
       <% if (data.production == "YES") { %>
       (still in production)
       <% } %>
