--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Passion+One" rel="stylesheet">
     <%= t.include("partials/_head.html") %>
   </head>
   <body>
@@ -24,9 +23,18 @@
       <% json.BoeingAnniversary_timeline.forEach(function(row) { %>
       <section class="stage" id="">
         <h2><%= row.title %></h2>
-        <div class="text">
-          <p>
-          <%= row.text.replace("\n", "<p>") %>
+        <div class="row">
+          <% if (row.image) { %>
+          <div class="photo">
+            <img src="./assets/images/<%= row.image %>">
+            <div class="credit"><%= row.credit %></div>
+            <div class="caption"><%= row.caption %></div>
+          </div>
+          <% } %>
+          <div class="text">
+            <p>
+            <%= row.text.replace("\n", "<p>") %>
+          </div>
         </div>
       </section>
       <% }) %>
