--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,10 @@
     <header class="splash">
       <h1>Flying high</h1>
       <p class="chatter">
-        Over the last 100 years, Boeing's story has paralleled the history of the United States, with ups, downs, and everything in between &mdash; even a boat or two!
+        The footnotes on some of Boeing’s early planes read, "Only one was ever built." But over the last 100 years Boeing has pioneered successful planes at each stage of the industry’s development, from early air mail carriers to the latest jets built with carbon-fiber composites.
+
+      <p class="chatter">
+        Below, in addition to a brief history of these stages, you’ll find an interactive guide to the evolution of Boeing’s commercial aircraft. 
     </header>
 
     <main class="timeline">
