--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,11 @@
         The footnotes on some of Boeing’s early planes read, "Only one was ever built." But over the last 100 years Boeing has pioneered successful planes at each stage of the industry’s development, from early air mail carriers to the latest jets built with carbon-fiber composites.
 
       <p class="chatter">
-        Below, in addition to a brief history of these stages, you’ll find an interactive guide to the evolution of Boeing’s commercial aircraft. 
+        Below, in addition to a brief history of these stages, you’ll find an interactive guide to the evolution of Boeing’s commercial aircraft.
+
+        <div class="credit">
+          Graphics by Mark Nowlin &bull; Development by Thomas Wilburn
+        </div>
     </header>
 
     <main class="timeline">
